# univalue

./: CMakeLists.txt  COPYING  README.md
bench/: README.txt  bench_univalue.cpp  user.json
cmake/modules/: FindJansson.cmake
examples/: basic_example.cpp
include/: cc_variant.h  univalue.h
lib/: univalue.cpp  univalue_get.cpp  univalue_internal.h  univalue_read.cpp  univalue_write.cpp
test/: object.cpp  pretty2.json  test_json.cpp  unitester.cpp
